:sparkles:feat: função inserir dados

--- a/index.html
+++ b/index.html
@@ -34,19 +34,9 @@
             <th>Aprovado?</th>
           </tr>
 
-          <tr class="t_insert">
-            <td>Trabalho de Geografia</td>
-            <td>1.00</td>
-            <td>VVV</td>
-          </tr>
-
           <tr class="t_score">
-            <td>
-              Média Final:
-            </td>
-            <td class="score_final">
-              ---
-            </td>
+            <td>Média Final:</td>
+            <td class="score_final">___</td>
             <td class="score_approve">
               <span class="is_approved">Teste</span>
             </td>
@@ -56,6 +46,8 @@
     </div>
 
   </div>
+
+  <script src="./src/js/main.js"></script>
 </body>
 
 </html>
