:sparkles:feat : average function & number formatting

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
           <tr class="t_score">
             <td>Média Final:</td>
-            <td class="score_final">___</td>
-            <td class="score_approve">
+            <td id="score_final">0</td>
+            <td id="score_approve">
               <span class="is_approved">Teste</span>
             </td>
           </tr>
