:sparkles:feat: fn resultado aprovação

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <td>Média Final:</td>
             <td id="score_final">0</td>
             <td id="score_approve">
-              <span class="is_approved">Teste</span>
+              <span class="is_approved">Aguardando</span>
             </td>
           </tr>
         </tbody>
