:recycle:refactor: css modules & verificação ao inserir dados

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="table.css">
+  <title>Calculadora - Médias</title>
+  <link rel="stylesheet" href="/src/css/main.css">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
 
       <form id="input_fields">
         <input type="text" id="inp-atv" placeholder="Nome da Atividade">
-        <input type="text" id="inp-nota" placeholder="Nota">
+        <input type="number" id="inp-nota" placeholder="Nota" min="0" max="10">
         <button type="button" class="add_btn">
           <span>Adicionar +</span>
         </button>
