--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   </div>
 
-  <script src="./src/js/main.js"></script>
+  <script type="module" src="./src/js/main.js"></script>
 </body>
 
 </html>
